--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         });
 
         var ctaLayer = new google.maps.KmlLayer({
-          url: 'http://googlemaps.github.io/js-v2-samples/ggeoxml/cta.kml',
+          url: 'http://www.google.com/maps/d/u/0/kml?mid=1NMi554M7U1HFJhxvDuwEBXEFsSU&amp;lid=rgKkUtasv1o',
           map: map
         });
       }
