--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 11,
-          center: {lat: 41.876, lng: -87.624}
+          center: {lat: 41.876, lng: -87.624},
+          streetViewControl: false
         });
 
         var ctaLayer = new google.maps.KmlLayer({
