--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
     </style>
   </head>
-  <body>
+  <body onload="init()">
     <div id="map"></div>
     <div id="capture"></div>
     <script>
