--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         
       }
       var geoloccontrol = new klokantech.GeolocationControl(map, mapMaxZoom);
+      var mapMaxZoom = 18;
 
     </script>
     <script async defer
