--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
       }
     </style>
   </head>
-  <body onload="init()">
+  <body>
     <div id="map"></div>
-    <div id="capture"></div>
     <script>
 var map,
     faisalabad = {lat:0, lng:0};
