--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             map.fitBounds(mapBounds);
             
             // POGO Layer 1
-                 var ctaLayer = new google.maps.KmlLayer({
-          url: 'http://www.google.com/maps/d/u/0/kml?mid=1NMi554M7U1HFJhxvDuwEBXEFsSU&amp;lid=rgKkUtasv1o',
-          map: map
-        });
+//                 var ctaLayer = new google.maps.KmlLayer({
+  //        url: 'http://www.google.com/maps/d/u/0/kml?mid=1NMi554M7U1HFJhxvDuwEBXEFsSU&amp;lid=rgKkUtasv1o',
+//          map: map
+  //      });
           // Gotta catch em all clone
                  var ctaLayer2 = new google.maps.KmlLayer({
           url: 'http://www.google.com/maps/d/u/1/kml?mid=14Qv3Kfld9vdpXk7_M25beuhJBi4',
