--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
           map: map
         });
         
-
+          // Pokemon GO! https://www.google.com/maps/d/u/0/viewer?hl=en&authuser=0&mid=1mpXySCt1jbnyEwy7V6ekRuRHMFI
+                 var ctaLayer3 = new google.maps.KmlLayer({
+          url: 'http://www.google.com/maps/d/u/0/kml?mid=1mpXySCt1jbnyEwy7V6ekRuRHMFI',
+          map: map
+        });
+        
           }
         </script>
         <style>
