--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
       <head>
-        <title>Campus Map</title>
+        <title>Pokemon Go Map</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
         <script src="https://maps.google.com/maps/api/js?key=AIzaSyDEqX2Wd1DCH9J2OqFD83Q9lfAJ8pcvuhg&callback=initMap"></script>
