--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
           url: 'http://www.google.com/maps/d/u/0/kml?mid=1mpXySCt1jbnyEwy7V6ekRuRHMFI',
           map: map
         });
+           // Pokemon go new york
+                 var ctaLayer4 = new google.maps.KmlLayer({
+          url: 'http://www.google.com/maps/d/u/0/kml?mid=1ifFEnIz0zgBmxX0CmtJpRVi_udw',
+          map: map
+        });
+           // Pokemon caught world map / London
+                 var ctaLayer4 = new google.maps.KmlLayer({
+          url: 'http://www.google.com/maps/d/u/0/kml?mid=1_EMLlYsK7BlpPQGxCYDDLNbOMGY',
+          map: map
+        });
         
           }
         </script>
