--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
           map: map
         });
            // Pokemon caught world map / London
-                 var ctaLayer4 = new google.maps.KmlLayer({
+                 var ctaLayer5 = new google.maps.KmlLayer({
           url: 'http://www.google.com/maps/d/u/0/kml?mid=1_EMLlYsK7BlpPQGxCYDDLNbOMGY',
+          map: map
+        }); 
+        // Texas Pokemon Go map
+                 var ctaLayer5 = new google.maps.KmlLayer({
+          url: 'http://www.google.com/maps/d/u/0/kml?mid=1dTSgdrHftP-6dwz-3l2eDkeNESI',
           map: map
         });
         
