--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
         </style>
       </head>
       <body onload="init()">
-        <div id="map"></div>
+        <div id="map" background: url('http://www.nycgovparks.org/web/map/images/ajax-loader.gif'); background-repeat: no-repeat; background-position: center;"></div>
       </body>
     </html>
